[project]
name = "sentry-go"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "axe-core-python>=0.1.0",
    "fastmcp>=2.14.5",
    "mcp[cli]>=1.26.0",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
]
